{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 58,
  "lineage": "d9768f55-06cb-1c69-5216-096c9dccd40a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-bastion-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/publicIPAddresses/k8s-bastion-pip",
                "subnet_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-10-D9-E0",
            "name": "k8s-bastion-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "k8s-cluster-rg",
            "virtual_machine_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Compute/virtualMachines/k8s-bastion"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.k8s_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "master_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-master-1-nic",
            "internal_domain_name_suffix": "axxl5mtxbcnevimlenvhfo1uyd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "00-0D-3A-BF-F3-E3",
            "name": "k8s-master-1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "k8s-cluster-rg",
            "virtual_machine_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Compute/virtualMachines/k8s-master-1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.k8s_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-worker-1-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-94-5A-DA",
            "name": "k8s-worker-1-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "k8s-cluster-rg",
            "virtual_machine_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Compute/virtualMachines/k8s-worker-1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.k8s_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "bastion_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-bastion-nic|/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-bastion-nsg",
            "network_interface_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-bastion-nic",
            "network_security_group_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-bastion-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.bastion_nic",
            "azurerm_network_security_group.bastion_nsg",
            "azurerm_public_ip.bastion_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.k8s_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "master_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-master-1-nic|/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nsg",
            "network_interface_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-master-1-nic",
            "network_security_group_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.master_nic",
            "azurerm_network_security_group.master_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.k8s_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "worker_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-worker-1-nic|/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-worker-nsg",
            "network_interface_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkInterfaces/k8s-worker-1-nic",
            "network_security_group_id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-worker-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.worker_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.k8s_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-bastion-nsg",
            "location": "westeurope",
            "name": "k8s-bastion-nsg",
            "resource_group_name": "k8s-cluster-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-In",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SSH-Out",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "master_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nsg",
            "location": "westeurope",
            "name": "k8s-master-nsg",
            "resource_group_name": "k8s-cluster-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Internal-Traffic",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250-10252",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8s-Master-Services",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2379-2380",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "etcd",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8s-API",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "worker_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/networkSecurityGroups/k8s-worker-nsg",
            "location": "westeurope",
            "name": "k8s-worker-nsg",
            "resource_group_name": "k8s-cluster-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Internal-Traffic",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Kubelet",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30000-32767",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NodePort",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/publicIPAddresses/k8s-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "128.251.187.170",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "k8s-bastion-pip",
            "resource_group_name": "k8s-cluster-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Kubernetes",
              "Role": "Bastion"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet",
            "name": "k8s-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "k8s-cluster-rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "k8s-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b2bfee05-0877-4a9a-a18b-236a72bb74c3",
            "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet",
            "location": "westeurope",
            "name": "k8s-vnet",
            "resource_group_name": "k8s-cluster-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ef90f1f8-dfd6-4cd7-81f1-bd37f18abb1e/resourceGroups/k8s-cluster-rg/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-subnet",
                "name": "k8s-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}